# side-eye-go

./: client.go  client_test.go  go.mod  go.sum
apipb/: api.pb.go  api.proto  api_grpc.pb.go  apipb.go  compile_proto.sh  protoc-gen-go-grpc
internal/allgs/: BUILD.bazel  go_1_20.go  traceback.go
internal/apiclient/: api_client.go
internal/apipb/: BUILD.bazel  api.pb.go  api.proto  api_grpc.pb.go  compile_proto.sh
internal/artifactspb/: BUILD.bazel  artifacts.pb.go  artifacts.proto  artifacts_grpc.pb.go  chunk.proto  compile_proto.sh  gen.go
internal/boottime/: boot_time.go  boot_time_darwin.go  boot_time_linux.go  boot_time_other.go
internal/chunkpb/: BUILD.bazel  chunk.pb.go  chunk.proto  compile_proto.sh  gen.go
internal/fifo/: BUILD.bazel  queue.go
internal/framing/: BUILD.bazel  framing.go
internal/machinapb/: BUILD.bazel  chunk.proto  compile_proto.sh  gen.go  go_pprof.pb.go  go_pprof.proto  go_pprof_grpc.pb.go  machina.pb.go  machina.proto  machina_grpc.pb.go  process.pb.go  process.proto
internal/moduledata/: BUILD.bazel  moduledata.go
internal/server/: BUILD.bazel  fetcher.go  server.go  start_time.go
internal/serverdial/: BUILD.bazel  header_dialer.go  server_dial.go
internal/sideeyeconn/: side_eye_conn.go  start_time.go
internal/snapshot/: BUILD.bazel  debug_out_buf.go  out_buf.go  queue.go  snapshot.go  stack_machine.go  unwinder.go  unwinder_amd64.go  unwinder_arm64.go
internal/snapshotpb/: BUILD.bazel  compile_proto.sh  gen.go  snapshot_program.pb.go  snapshot_program.proto  snapshot_program_grpc.pb.go
internal/stackmachine/: BUILD.bazel  op_decoder.go  opcode_string.go  stack_machine.go
internal/stoptheworld/: BUILD.bazel  abi_arm64.h  defs_darwin_arm64.go  defs_linux_amd64.go  go_1_20+1_21.go  go_1_20.go  go_1_21.go  go_1_22+1_23+1_24.go  go_1_22+1_23.go  go_1_22.go  go_1_23.go  go_1_24+.go  go_1_25+.go  platform_supported.go  signal_darwin_arm64.go  signal_darwin_arm64.s  signal_fallback.go  signal_linux_amd64.go  signal_linux_amd64.s  stop_the_world.go
internal/tools/: go.mod  go.sum  main.go  protoc-gen-go  protoc-gen-go-grpc
sideeye/: BUILD.bazel  http_handler.go  side_eye.go  side_eye_test.go
sideeyeclient/: BUILD.bazel  client.go  client_test.go
sideeyeclient/apipb/: api_grpc.pb.go  compile_proto.sh
