load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sideeye",
    srcs = [
        "http_handler.go",
        "side_eye.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/sideeye",
    visibility = ["//visibility:public"],
    deps = [
        "//side-eye-go/internal/artifactspb",
        "//side-eye-go/internal/machinapb",
        "//side-eye-go/internal/server",
        "//side-eye-go/internal/serverdial",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
