load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sideeyeclient",
    srcs = ["client.go"],
    importpath = "github.com/DataExMachina-dev/side-eye-go/sideeyeclient",
    visibility = ["//visibility:public"],
    deps = [
        "//side-eye-go/internal/apipb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "sideeyeclient_test",
    size = "small",
    srcs = ["client_test.go"],
    deps = [":sideeyeclient"],
)
