load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "chunkpb",
    srcs = [
        "chunk.pb.go",
        "gen.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/internal/chunkpb",
    visibility = ["//side-eye-go:__subpackages__"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
