load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "fetcher.go",
        "server.go",
        "start_time.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/internal/server",
    visibility = ["//side-eye-go:__subpackages__"],
    deps = [
        "//side-eye-go/internal/artifactspb",
        "//side-eye-go/internal/chunkpb",
        "//side-eye-go/internal/machinapb",
        "//side-eye-go/internal/snapshot",
        "//side-eye-go/internal/snapshotpb",
        "@com_github_google_uuid//:uuid",
        "@com_github_minio_highwayhash//:highwayhash",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//singleflight",
    ],
)
