load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "snapshot",
    srcs = [
        "out_buf.go",
        "queue.go",
        "snapshot.go",
        "stack_machine.go",
        "unwinder.go",
        "unwinder_amd64.go",
        "unwinder_arm64.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/internal/snapshot",
    visibility = ["//side-eye-go:__subpackages__"],
    deps = [
        "//side-eye-go/internal/allgs",
        "//side-eye-go/internal/fifo",
        "//side-eye-go/internal/framing",
        "//side-eye-go/internal/machinapb",
        "//side-eye-go/internal/moduledata",
        "//side-eye-go/internal/snapshotpb",
        "//side-eye-go/internal/stackmachine",
        "//side-eye-go/internal/stoptheworld",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
