load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "snapshotpb",
    srcs = [
        "gen.go",
        "snapshot_program.pb.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/internal/snapshotpb",
    visibility = ["//side-eye-go:__subpackages__"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
