load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "stoptheworld",
    srcs = [
        "abi_arm64.h",
        "defs_darwin_arm64.go",
        "defs_linux_amd64.go",
        "go_1_20.go",
        "go_1_21.go",
        "go_1_22.go",
        "go_1_23.go",
        "signal_darwin_arm64.go",
        "signal_darwin_arm64.s",
        "signal_linux_amd64.go",
        "signal_linux_amd64.s",
        "stop_the_world.go",
    ],
    importpath = "github.com/DataExMachina-dev/side-eye-go/internal/stoptheworld",
    visibility = ["//side-eye-go:__subpackages__"],
    deps = ["//side-eye-go/internal/snapshotpb"],
)
